QtBeef/src/Qt/qevent.bf

class QNativeGestureEvent : IQNativeGestureEvent, IQSinglePointEvent, IQPointerEvent, IQInputEvent, IQEvent
{
	private QNativeGestureEvent_Ptr ptr;
	public void* ObjectPtr => ptr.Ptr;
	public this(QNativeGestureEvent_Ptr ptr)
	{
		this.ptr = ptr;
	}
	public this(Qt_NativeGestureType type, IQPointingDevice dev, IQPointF localPos, IQPointF scenePos, IQPointF globalPos, double value, c_ulonglong sequenceId, c_ulonglong intArgument)
	{
		this.ptr = CQt.QNativeGestureEvent_new(type, (.)dev?.ObjectPtr, (.)localPos?.ObjectPtr, (.)scenePos?.ObjectPtr, (.)globalPos?.ObjectPtr, value, sequenceId, intArgument);
	}
	public this(Qt_NativeGestureType type, IQPointingDevice dev, c_int fingerCount, IQPointF localPos, IQPointF scenePos, IQPointF globalPos, double value, IQPointF delta)
	{
		this.ptr = CQt.QNativeGestureEvent_new2(type, (.)dev?.ObjectPtr, fingerCount, (.)localPos?.ObjectPtr, (.)scenePos?.ObjectPtr, (.)globalPos?.ObjectPtr, value, (.)delta?.ObjectPtr);
	}
	public this(Qt_NativeGestureType type, IQPointingDevice dev, c_int fingerCount, IQPointF localPos, IQPointF scenePos, IQPointF globalPos, double value, IQPointF delta, c_ulonglong sequenceId)
	{
		this.ptr = CQt.QNativeGestureEvent_new3(type, (.)dev?.ObjectPtr, fingerCount, (.)localPos?.ObjectPtr, (.)scenePos?.ObjectPtr, (.)globalPos?.ObjectPtr, value, (.)delta?.ObjectPtr, sequenceId);
	}
	public ~this()
	{
		CQt.QNativeGestureEvent_Delete(this.ptr);
	}
	public QNativeGestureEvent_Ptr Clone()
	{
		return QNativeGestureEvent_Ptr(CQt.QNativeGestureEvent_Clone((.)this.ptr.Ptr));
	}
	public Qt_NativeGestureType GestureType()
	{
		return CQt.QNativeGestureEvent_GestureType((.)this.ptr.Ptr);
	}
	public c_int FingerCount()
	{
		return CQt.QNativeGestureEvent_FingerCount((.)this.ptr.Ptr);
	}
	public double Value()
	{
		return CQt.QNativeGestureEvent_Value((.)this.ptr.Ptr);
	}
	public QPointF_Ptr Delta()
	{
		return QPointF_Ptr(CQt.QNativeGestureEvent_Delta((.)this.ptr.Ptr));
	}
	public QPoint_Ptr Pos()
	{
		return QPoint_Ptr(CQt.QNativeGestureEvent_Pos((.)this.ptr.Ptr));
	}
	public QPoint_Ptr GlobalPos()
	{
		return QPoint_Ptr(CQt.QNativeGestureEvent_GlobalPos((.)this.ptr.Ptr));
	}
	public QPointF_Ptr LocalPos()
	{
		return QPointF_Ptr(CQt.QNativeGestureEvent_LocalPos((.)this.ptr.Ptr));
	}
	public QPointF_Ptr WindowPos()
	{
		return QPointF_Ptr(CQt.QNativeGestureEvent_WindowPos((.)this.ptr.Ptr));
	}
	public QPointF_Ptr ScreenPos()
	{
		return QPointF_Ptr(CQt.QNativeGestureEvent_ScreenPos((.)this.ptr.Ptr));
	}
	public Qt_MouseButton Button()
	{
		return CQt.QSinglePointEvent_Button((.)this.ptr.Ptr);
	}
	public void* Buttons()
	{
		return CQt.QSinglePointEvent_Buttons((.)this.ptr.Ptr);
	}
	public QPointF_Ptr Position()
	{
		return QPointF_Ptr(CQt.QSinglePointEvent_Position((.)this.ptr.Ptr));
	}
	public QPointF_Ptr ScenePosition()
	{
		return QPointF_Ptr(CQt.QSinglePointEvent_ScenePosition((.)this.ptr.Ptr));
	}
	public QPointF_Ptr GlobalPosition()
	{
		return QPointF_Ptr(CQt.QSinglePointEvent_GlobalPosition((.)this.ptr.Ptr));
	}
	public bool IsBeginEvent()
	{
		return CQt.QSinglePointEvent_IsBeginEvent((.)this.ptr.Ptr);
	}
	public bool IsUpdateEvent()
	{
		return CQt.QSinglePointEvent_IsUpdateEvent((.)this.ptr.Ptr);
	}
	public bool IsEndEvent()
	{
		return CQt.QSinglePointEvent_IsEndEvent((.)this.ptr.Ptr);
	}
	public QObject_Ptr ExclusivePointGrabber()
	{
		return QObject_Ptr(CQt.QSinglePointEvent_ExclusivePointGrabber((.)this.ptr.Ptr));
	}
	public void SetExclusivePointGrabber(IQObject exclusiveGrabber)
	{
		CQt.QSinglePointEvent_SetExclusivePointGrabber((.)this.ptr.Ptr, (.)exclusiveGrabber?.ObjectPtr);
	}
	public QPointingDevice_Ptr PointingDevice()
	{
		return QPointingDevice_Ptr(CQt.QPointerEvent_PointingDevice((.)this.ptr.Ptr));
	}
	public QPointingDevice_PointerType PointerType()
	{
		return CQt.QPointerEvent_PointerType((.)this.ptr.Ptr);
	}
	public void SetTimestamp(c_ulonglong timestamp)
	{
		CQt.QPointerEvent_SetTimestamp((.)this.ptr.Ptr, timestamp);
	}
	public void* PointCount()
	{
		return CQt.QPointerEvent_PointCount((.)this.ptr.Ptr);
	}
	public QEventPoint_Ptr Point(void* i)
	{
		return QEventPoint_Ptr(CQt.QPointerEvent_Point((.)this.ptr.Ptr, i));
	}
	public void** Points()
	{
		return CQt.QPointerEvent_Points((.)this.ptr.Ptr);
	}
	public QEventPoint_Ptr PointById(c_int id)
	{
		return QEventPoint_Ptr(CQt.QPointerEvent_PointById((.)this.ptr.Ptr, id));
	}
	public bool AllPointsGrabbed()
	{
		return CQt.QPointerEvent_AllPointsGrabbed((.)this.ptr.Ptr);
	}
	public bool AllPointsAccepted()
	{
		return CQt.QPointerEvent_AllPointsAccepted((.)this.ptr.Ptr);
	}
	public void SetAccepted(bool accepted)
	{
		CQt.QPointerEvent_SetAccepted((.)this.ptr.Ptr, accepted);
	}
	public QObject_Ptr ExclusiveGrabber(IQEventPoint point)
	{
		return QObject_Ptr(CQt.QPointerEvent_ExclusiveGrabber((.)this.ptr.Ptr, (.)point?.ObjectPtr));
	}
	public void SetExclusiveGrabber(IQEventPoint point, IQObject exclusiveGrabber)
	{
		CQt.QPointerEvent_SetExclusiveGrabber((.)this.ptr.Ptr, (.)point?.ObjectPtr, (.)exclusiveGrabber?.ObjectPtr);
	}
	public void ClearPassiveGrabbers(IQEventPoint point)
	{
		CQt.QPointerEvent_ClearPassiveGrabbers((.)this.ptr.Ptr, (.)point?.ObjectPtr);
	}
	public bool AddPassiveGrabber(IQEventPoint point, IQObject grabber)
	{
		return CQt.QPointerEvent_AddPassiveGrabber((.)this.ptr.Ptr, (.)point?.ObjectPtr, (.)grabber?.ObjectPtr);
	}
	public bool RemovePassiveGrabber(IQEventPoint point, IQObject grabber)
	{
		return CQt.QPointerEvent_RemovePassiveGrabber((.)this.ptr.Ptr, (.)point?.ObjectPtr, (.)grabber?.ObjectPtr);
	}
	public QInputDevice_Ptr Device()
	{
		return QInputDevice_Ptr(CQt.QInputEvent_Device((.)this.ptr.Ptr));
	}
	public QInputDevice_DeviceType DeviceType()
	{
		return CQt.QInputEvent_DeviceType((.)this.ptr.Ptr);
	}
	public void* Modifiers()
	{
		return CQt.QInputEvent_Modifiers((.)this.ptr.Ptr);
	}
	public void SetModifiers(void* modifiers)
	{
		CQt.QInputEvent_SetModifiers((.)this.ptr.Ptr, modifiers);
	}
	public c_ulonglong Timestamp()
	{
		return CQt.QInputEvent_Timestamp((.)this.ptr.Ptr);
	}
	public QEvent_Type Type()
	{
		return CQt.QEvent_Type((.)this.ptr.Ptr);
	}
	public bool Spontaneous()
	{
		return CQt.QEvent_Spontaneous((.)this.ptr.Ptr);
	}
	public bool IsAccepted()
	{
		return CQt.QEvent_IsAccepted((.)this.ptr.Ptr);
	}
	public void Accept()
	{
		CQt.QEvent_Accept((.)this.ptr.Ptr);
	}
	public void Ignore()
	{
		CQt.QEvent_Ignore((.)this.ptr.Ptr);
	}
	public bool IsInputEvent()
	{
		return CQt.QEvent_IsInputEvent((.)this.ptr.Ptr);
	}
	public bool IsPointerEvent()
	{
		return CQt.QEvent_IsPointerEvent((.)this.ptr.Ptr);
	}
	public bool IsSinglePointEvent()
	{
		return CQt.QEvent_IsSinglePointEvent((.)this.ptr.Ptr);
	}
	public c_int RegisterEventType()
	{
		return CQt.QEvent_RegisterEventType();
	}
	public c_int RegisterEventType1(c_int hint)
	{
		return CQt.QEvent_RegisterEventType1(hint);
	}
}
interface IQNativeGestureEvent : IQtObjectInterface
{
}
// --------------------------------------------------------------
// QKeyEvent
// --------------------------------------------------------------
[CRepr]
struct QKeyEvent_Ptr
{
	public void* Ptr;
	public this(void* ptr)
	{
		this.Ptr = ptr;
	}
}
extension CQt
{
	[LinkName("QKeyEvent_new")]
	public static extern QKeyEvent_Ptr QKeyEvent_new(QEvent_Type type, c_int key, void* modifiers);
	[LinkName("QKeyEvent_new2")]
	public static extern QKeyEvent_Ptr QKeyEvent_new2(QEvent_Type type, c_int key, void* modifiers, c_uint nativeScanCode, c_uint nativeVirtualKey, c_uint nativeModifiers);
	[LinkName("QKeyEvent_new3")]
	public static extern QKeyEvent_Ptr QKeyEvent_new3(QEvent_Type type, c_int key, void* modifiers, libqt_string text);
	[LinkName("QKeyEvent_new4")]
	public static extern QKeyEvent_Ptr QKeyEvent_new4(QEvent_Type type, c_int key, void* modifiers, libqt_string text, bool autorep);
	[LinkName("QKeyEvent_new5")]
	public static extern QKeyEvent_Ptr QKeyEvent_new5(QEvent_Type type, c_int key, void* modifiers, libqt_string text, bool autorep, c_ushort count);
	[LinkName("QKeyEvent_new6")]
	public static extern QKeyEvent_Ptr QKeyEvent_new6(QEvent_Type type, c_int key, void* modifiers, c_uint nativeScanCode, c_uint nativeVirtualKey, c_uint nativeModifiers, libqt_string text);
	[LinkName("QKeyEvent_new7")]
	public static extern QKeyEvent_Ptr QKeyEvent_new7(QEvent_Type type, c_int key, void* modifiers, c_uint nativeScanCode, c_uint nativeVirtualKey, c_uint nativeModifiers, libqt_string text, bool autorep);
	[LinkName("QKeyEvent_new8")]
	public static extern QKeyEvent_Ptr QKeyEvent_new8(QEvent_Type type, c_int key, void* modifiers, c_uint nativeScanCode, c_uint nativeVirtualKey, c_uint nativeModifiers, libqt_string text, bool autorep, c_ushort count);
	[LinkName("QKeyEvent_new9")]
	public static extern QKeyEvent_Ptr QKeyEvent_new9(QEvent_Type type, c_int key, void* modifiers, c_uint nativeScanCode, c_uint nativeVirtualKey, c_uint nativeModifiers, libqt_string text, bool autorep, c_ushort count, void** device);
	[LinkName("QKeyEvent_Delete")]
	public static extern void QKeyEvent_Delete(QKeyEvent_Ptr self);
	[LinkName("QKeyEvent_Clone")]
	public static extern void** QKeyEvent_Clone(void* self);
	[LinkName("QKeyEvent_Key")]
	public static extern c_int QKeyEvent_Key(void* self);
	[LinkName("QKeyEvent_Matches")]
	public static extern bool QKeyEvent_Matches(void* self, QKeySequence_StandardKey key);
	[LinkName("QKeyEvent_Modifiers")]
	public static extern void* QKeyEvent_Modifiers(void* self);
	[LinkName("QKeyEvent_KeyCombination")]
	public static extern void* QKeyEvent_KeyCombination(void* self);
	[LinkName("QKeyEvent_Text")]
	public static extern libqt_string QKeyEvent_Text(void* self);
	[LinkName("QKeyEvent_IsAutoRepeat")]
	public static extern bool QKeyEvent_IsAutoRepeat(void* self);
	[LinkName("QKeyEvent_Count")]
	public static extern c_int QKeyEvent_Count(void* self);
	[LinkName("QKeyEvent_NativeScanCode")]
	public static extern c_uint QKeyEvent_NativeScanCode(void* self);
	[LinkName("QKeyEvent_NativeVirtualKey")]
	public static extern c_uint QKeyEvent_NativeVirtualKey(void* self);
	[LinkName("QKeyEvent_NativeModifiers")]
	public static extern c_uint QKeyEvent_NativeModifiers(void* self);
}
